--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,24 +3,28 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary: #d6ed17;
+  --secondary: #606060;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-heading: var(--font-zen-dots);
+
+  --color-primary: var(--primary);
+  --color-secondary: var(--secondary);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background: var(--color-neutral-900);
+  color: var(--color-zinc-200);
+  @apply font-sans overflow-x-hidden;
 }
