refactor: update styles and improve component structure across various sections

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@ html {
 }
 
 body {
-  background: var(--color-neutral-900);
+  background: var(--color-foreground);
   color: var(--color-zinc-200);
   @apply font-sans overflow-x-hidden;
 }
